fixed project card overflow

--- a/3d-portfolio/css/global_styles.css
+++ b/3d-portfolio/css/global_styles.css
@@ -10,11 +10,19 @@
     box-sizing: border-box;
 }
 
+html,
 body {
+    width: 100%;
+    height: 100%;
     margin: 0;
+    padding: 0;
+}
+
+body {
     display: flex;
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw; */
+    /* height: 100vh; */
+    /* height: 100%; */
 
     /* overflow: hidden; */
 
