--- a/3d-portfolio/css/temp.css
+++ b/3d-portfolio/css/temp.css
@@ -65,16 +65,15 @@ pointer-events: none; */
 }
 
 .project-card {
-    position: fixed;
-    top: 10%;
-    bottom: 5%;
-    left: 24px;
-    /* left: 0; */
+    position: relative;
+    display: flex;
+    flex-direction: column;
     width: 84%;
-    height: 88%;
+    height: 80vh;
     border-radius: 10px;
     background-color: #202020;
     padding: 24px;
+    margin: 24px;
 }
 
 .project-info {
@@ -102,11 +101,12 @@ pointer-events: none; */
     height: 100%;
     width: 100%;
     overflow: hidden;
+    /* margin-top: 100px; */
+    margin-top: 8%;
     gap: 10vw;
     display: flex;
     align-items: center;
-    justify-content: center; /* Add this to center the image vertically */
-    max-height: 100%;
+    max-height: calc(100vh - 200px);
 }
 
 .slideshow-container {
@@ -117,13 +117,13 @@ pointer-events: none; */
     /* transition: transform 0.25s; */
 }
 .slide {
-    width: 100%;
+    /* max-width: 80%; */
 }
 
 .slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain; /* This property ensures the image fits inside the card without overflowing */
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 .slide iframe {
